Bug fixes, implemented API using plugin system.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
-main: it.fireentity.library.LibraryPlugin
+main: it.fireentity.library.APIFireLibrary
 name: FireLib
 version: 1.0-SNAPSHOT
 authors: [Fireentity]
 depend: [DataCore, ProtocolLib]
-commands:
+command:
+  ciao: "ciao"
