--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,6 @@ name: FireLibrary
 version: 1.0-SNAPSHOT
 authors: [Fireentity]
 depend: [DataCore, ProtocolLib]
-command:
-  ciao: "ciao"
+commands:
+  firelibapi:
+   description: "ciao"
